Fix: grid gap- what we offer

--- a/sass/layout/_what-we-offer.scss
+++ b/sass/layout/_what-we-offer.scss
@@ -23,7 +23,7 @@ h1{
     height: auto;
     grid-template-columns: 35% 35%;
     grid-template-rows: auto auto;
-    grid-column-gap: 150px;
+    grid-column-gap: 130px;
     justify-content: center;
 }
 .what-we-offer-private, .what-we-offer-confidential, .what-we-offer-trustworthy, .what-we-offer-secure{
