--- a/style.css
+++ b/style.css
@@ -999,7 +999,7 @@ h1 {
   height: auto;
   grid-template-columns: 35% 35%;
   grid-template-rows: auto auto;
-  grid-column-gap: 150px;
+  grid-column-gap: 130px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
